H3CIPMSJAVA-20180830/src/objects/Coverage_SLA_Maping_Rule__c.object
<CustomObject>
    <description>Coverage SLA mapping rule</description>
    <fields>
        <fullName>SLAType__c</fullName>
        <label>SLAType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sort__c</fullName>
        <label>sort</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Coverage SLA Maping Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coverage SLA Maping Rule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>